Added base template component including navbar,mobilenavbar and footer, added primary bg color

--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -1,6 +1,5 @@
-$color-primary: #0A7271;
+$bg-primary: #14162f;
 
-
-.color-primary {
-    color: $color-primary;
+.bg-primary {
+  background-color: $bg-primary ;
 }
