--- a/src/interface/template/template.scss
+++ b/src/interface/template/template.scss
@@ -12,6 +12,9 @@
   &_navbar-container {
     width: 100%;
   }
+  &_children-container {
+    padding: 10rem 0;
+  }
 
   &_desktop-navbar-container,
   &_mobile-navbar-container {
