--- a/src/interface/FormInput/FormInput.scss
+++ b/src/interface/FormInput/FormInput.scss
@@ -1,9 +1,13 @@
 .form-input {
   font-size: 1.2rem;
   font-family: inherit;
-  width: 20rem;
+  width: 30rem;
   padding: 1rem 1rem;
   border-radius: 5px;
-  border-color: black;
+  border-color: #14162f;
   margin: 1rem 0;
+  &::placeholder {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+  }
 }
