--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,18 +1,20 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 html {
-    -webkit-font-smoothing: antialiased;
-    scroll-behavior: smooth;
-    font-size: 62.5%; // 10px rem size
+  -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
+  font-size: 62.5%; // 10px rem size
 }
 
-
+.f-s-override{
+  font-size: 1.4rem !important;
+}
 
 /* mobile-responsive scaling down */
 
