--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -20,32 +20,32 @@ html {
 
 // temporary removed for now as we moved to use MUI instead of building components from scratch
 
-// @media (max-width: 900px) {
-//     html {
-//         font-size: 9px;
-//     }
-// }
+@media (max-width: 900px) {
+    html {
+        font-size: 9px;
+    }
+}
 
-// @media (max-width: 700px) {
-//     html {
-//         font-size: 8px;
-//     }
-// }
+@media (max-width: 700px) {
+    html {
+        font-size: 8px;
+    }
+}
 
-// @media (max-width: 500px) {
-//     html {
-//         font-size: 7px;
-//     }
-// }
+@media (max-width: 500px) {
+    html {
+        font-size: 7px;
+    }
+}
 
-// @media (max-width: 400px) {
-//     html {
-//         font-size: 6.5px;
-//     }
-// }
+@media (max-width: 400px) {
+    html {
+        font-size: 6.5px;
+    }
+}
 
-// @media (max-width: 350px) {
-//     html {
-//         font-size: 6px;
-//     }
-// }
+@media (max-width: 350px) {
+    html {
+        font-size: 6px;
+    }
+}
