--- a/src/interface/Navbar/Navbar.scss
+++ b/src/interface/Navbar/Navbar.scss
@@ -29,8 +29,10 @@
     font-size: 1.5rem;
     transition: 0.2s ease-in-out;
     font-weight: 500;
+    transition: 0.2s ease-in-out;
     &:hover {
-      color: black;
+      opacity: 0.8;
+      transform: translateX(2px);
     }
   }
   &_right-side {
